# normal_map

./: .gitignore  CMakeLists.txt  NormalMap.sdf  NormalMap.sln  README.md
NormalMap/: NormalMap.cpp  NormalMap.vcxproj  NormalMap.vcxproj.filters  stdafx.cpp
props/: OpenCV_x64_debug.props  OpenCV_x64_release.props
